@@ -1,3 +1,8 @@
+2015-02-18  Michael Guravage  <guravage@weddell.itf.cwi.nl>
+
+	* style.css (object.viewembededfile): Resize embedded pdf viewer I
+	just added to the file_view page template.
+
 2015-02-03  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
 	* index.html: Added CWI image to footer.
